# CMakeTemplateProject

./: CMakeLists.txt  README.md
OtherStuff/: OtherClass.cpp  OtherClass.h
src/: AnotherClass.cpp  AnotherClass.h  SomeClass.cpp  SomeClass.h  main.cpp
templates/: ClassTemplate.cpp  ClassTemplate.h
